--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
 
   <!-- Start Links section -->
-  <section id="links" class="services">
+<!--  <section id="links" class="services">
     <div class="container">
       <div class="section-title">
         <h2>Resume & Links</h2>
@@ -538,7 +538,7 @@
         </div>
       </div>
     </div>
-  </section> <!--End Links Section -->
+  </section> --> <!--End Links Section -->
 
 
   <!-- Start Contact Section -->
