--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <h4 style="text-align:left;"><a href="#" target="_blank" style="color:#12d640">Testing</a><br> </h4>
         <!-- <p style="text-align:left;color:#fff"><em>Front-End Developer</em></p> -->
         <ul style="text-align:left;">
-          <li><b>Unit Testing:</b> Jest (React/React Native), Jasmine & Karma (Angular), React Testing Library</li>
+          <li>Unit Testing: Jest (React/React Native), Jasmine & Karma (Angular), React Testing Library</li>
           <li>E2E Testing: Protractor, Cypress (strong hands-on experience for automated UI testing)</li>
           <li>Testing Focus: Writing Unit Tests with Jest for React apps</li>
           </ul>
