--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1BgN_7EASC1BTBq9OwI3waDph_yQNa6zG/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <!-- <li><a href="https://drive.google.com/file/d/1BgN_7EASC1BTBq9OwI3waDph_yQNa6zG/view?usp=sharing" target="_blank"> <span>Resume</span></a></li> -->
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -184,12 +184,12 @@
               <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Bachelor of Engineering (B.E.) in Electronics and Communication Engineering</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">June 2012 - May 2016</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
+              <!-- <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <li>Database Management Systems</li>
                 <li>Cloud Computing</li>
                 <li>Foundation Of Algorithms</li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
@@ -312,6 +312,20 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.att.com/" style="color:#12d640">AT&T</a><br> </h4>
+                <h5 style="text-align:left;">Jul 2021 – Jan 2023</h5>
+                <p style="text-align:left;color:#fff"><em>Senior UI Developer </em></p>
+                <ul style="text-align:left;">
+                  <li>Developed dynamic and responsive UIs using Angular 8+, TypeScript, RxJS, and NgRx for efficient state management, enhancing scalability and maintainability.</li>
+                  <li>Consumed RESTful APIs using HttpClientModule for real-time data rendering and seamless user experiences.</li>
+                  <li>Implemented Cypress for E2E testing and improved test coverage to maintain a robust codebase.</li>
+                  <li>Integrated Java-based backend services with frontend applications for seamless API communication and real-time data rendering.</li>
+                  <li>Developed AEM templates and services using Java, HTL (Sightly), and JCR, enabling streamlined content management.</li>
+                  <li>Migrated legacy AngularJS components to modern Angular, improving maintainability and performance.</li>
+                  <li>Ensured WCAG 2.1 compliance, implemented Responsive Web Design (RWD), and improved the user experience across various devices.</li>
+                </ul>
+              </div>
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.nextiva.com/" style="color:#12d640">Nextiva</a><br> </h4>
                 <h5 style="text-align:left;">Nov 2019 - Jun 2021</h5>
                 <p style="text-align:left;color:#fff"><em>Node.js Developer</em></p>
@@ -401,6 +415,18 @@
               
               <div class="portfolio-links">
                 <a href="projects/wts.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <center><h4>Ecommerce Watch Store</h4></center>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/project3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              
+              <div class="portfolio-links">
+                <a href="projects/ecommerce.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -598,7 +624,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Senior UI Developer","Front End Specialist", "Full Stack Developer"],
+      strings: ["Senior UI Developer","Front End Developer", "Full Stack Developer"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
